[gd_scene load_steps=14 format=3]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/maps/backgrounds/background1.png" id="2"]
[ext_resource type="Theme" path="res://assets/themes/menu_theme.tres" id="3"]
[ext_resource type="Font" path="res://assets/fonts/bebas_title_font.tres" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.1, 0.12, 0.16, 0.92)
border_color = Color(0.28, 0.32, 0.4, 0.9)
border_width_all = 1
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_left = 18
corner_radius_bottom_right = 18
content_margin_left = 20
content_margin_top = 18
content_margin_right = 20
content_margin_bottom = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_primary_normal"]
bg_color = Color(0.93, 0.34, 0.18, 1)
border_color = Color(0.98, 0.62, 0.38, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 22
content_margin_top = 12
content_margin_right = 22
content_margin_bottom = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_primary_hover"]
bg_color = Color(0.98, 0.42, 0.2, 1)
border_color = Color(1, 0.7, 0.42, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 22
content_margin_top = 12
content_margin_right = 22
content_margin_bottom = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_primary_pressed"]
bg_color = Color(0.78, 0.26, 0.12, 1)
border_color = Color(0.9, 0.5, 0.28, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 22
content_margin_top = 12
content_margin_right = 22
content_margin_bottom = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_secondary_normal"]
bg_color = Color(0.2, 0.24, 0.3, 1)
border_color = Color(0.38, 0.42, 0.5, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 20
content_margin_top = 10
content_margin_right = 20
content_margin_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_secondary_hover"]
bg_color = Color(0.24, 0.28, 0.36, 1)
border_color = Color(0.5, 0.56, 0.66, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 20
content_margin_top = 10
content_margin_right = 20
content_margin_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_secondary_pressed"]
bg_color = Color(0.16, 0.2, 0.26, 1)
border_color = Color(0.34, 0.4, 0.5, 1)
border_width_all = 2
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 20
content_margin_top = 10
content_margin_right = 20
content_margin_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_option_normal"]
bg_color = Color(0.14, 0.16, 0.2, 1)
border_color = Color(0.36, 0.4, 0.48, 1)
border_width_all = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12
content_margin_left = 16
content_margin_top = 8
content_margin_right = 16
content_margin_bottom = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_option_hover"]
bg_color = Color(0.18, 0.2, 0.26, 1)
border_color = Color(0.5, 0.56, 0.66, 1)
border_width_all = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12
content_margin_left = 16
content_margin_top = 8
content_margin_right = 16
content_margin_bottom = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_option_pressed"]
bg_color = Color(0.12, 0.14, 0.18, 1)
border_color = Color(0.28, 0.32, 0.42, 1)
border_width_all = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12
content_margin_left = 16
content_margin_top = 8
content_margin_right = 16
content_margin_bottom = 8

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
theme = ExtResource("3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.04, 0.05, 0.08, 1)

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
modulate = Color(0.3, 0.3, 0.36, 1)
stretch_mode = 7
mouse_filter = 2

[node name="Vignette" type="ColorRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 120
custom_constants/margin_top = 80
custom_constants/margin_right = 120
custom_constants/margin_bottom = 80

[node name="Layout" type="VBoxContainer" parent="Content"]
layout_mode = 2
custom_constants/separation = 32
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderRow" type="HBoxContainer" parent="Content/Layout"]
layout_mode = 2
custom_constants/separation = 32
size_flags_horizontal = 3
alignment = 1
size_flags_vertical = 0

[node name="TitleBlock" type="VBoxContainer" parent="Content/Layout/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 0

[node name="Title" type="Label" parent="Content/Layout/HeaderRow/TitleBlock"]
layout_mode = 2
text = "SELECIONE SEU LUTADOR"
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 54
theme_override_colors/font_color = Color(0.95, 0.96, 1, 1)

[node name="SubtitleLabel" type="Label" parent="Content/Layout/HeaderRow/TitleBlock"]
layout_mode = 2
text = "Escolha o personagem para cada jogador"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.76, 0.86, 1)
name_in_owner = "SubtitleLabel"

[node name="InfoLabel" type="Label" parent="Content/Layout/HeaderRow/TitleBlock"]
layout_mode = 2
text = "Local agora • Online P2P em breve"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.56, 0.62, 0.74, 1)

[node name="OptionsCard" type="Panel" parent="Content/Layout/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(280, 0)
size_flags_horizontal = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="OptionsVBox" type="VBoxContainer" parent="Content/Layout/HeaderRow/OptionsCard"]
layout_mode = 2
custom_constants/separation = 12
alignment = 1

[node name="OptionsTitle" type="Label" parent="Content/Layout/HeaderRow/OptionsCard/OptionsVBox"]
layout_mode = 2
text = "OPÇÕES"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.84, 0.9, 1)

[node name="HitboxToggle" type="CheckButton" parent="Content/Layout/HeaderRow/OptionsCard/OptionsVBox"]
layout_mode = 2
text = "Mostrar hitboxes"
button_pressed = true
name_in_owner = "HitboxToggle"

[node name="DevToggle" type="CheckButton" parent="Content/Layout/HeaderRow/OptionsCard/OptionsVBox"]
layout_mode = 2
text = "Modo Dev"
button_pressed = false
name_in_owner = "DevToggle"

[node name="OptionsHint" type="Label" parent="Content/Layout/HeaderRow/OptionsCard/OptionsVBox"]
layout_mode = 2
text = "Dica: use o modo dev para testes rápidos."
autowrap_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.56, 0.62, 0.74, 1)

[node name="PlayersRow" type="HBoxContainer" parent="Content/Layout"]
layout_mode = 2
custom_constants/separation = 32
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Player1Card" type="Panel" parent="Content/Layout/PlayersRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 360)
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="Player1VBox" type="VBoxContainer" parent="Content/Layout/PlayersRow/Player1Card"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="Player1Label" type="Label" parent="Content/Layout/PlayersRow/Player1Card/Player1VBox"]
layout_mode = 2
text = "PLAYER 1"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.86, 0.9, 0.98, 1)

[node name="Player1Option" type="OptionButton" parent="Content/Layout/PlayersRow/Player1Card/Player1VBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(320, 48)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_pressed")
focus_mode = 1
mouse_filter = 1
name_in_owner = "Player1Option"

[node name="Player1BotToggle" type="CheckButton" parent="Content/Layout/PlayersRow/Player1Card/Player1VBox"]
layout_mode = 2
text = "Bot IA (P1)"
button_pressed = false
name_in_owner = "Player1BotToggle"

[node name="Player1BotPolicy" type="OptionButton" parent="Content/Layout/PlayersRow/Player1Card/Player1VBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(280, 40)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_pressed")
focus_mode = 1
mouse_filter = 1
name_in_owner = "Player1BotPolicy"

[node name="Player1Hint" type="Label" parent="Content/Layout/PlayersRow/Player1Card/Player1VBox"]
layout_mode = 2
text = "Escolha o lutador de entrada ou ative o bot."
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.56, 0.62, 0.74, 1)
autowrap_mode = 2

[node name="Player2Card" type="Panel" parent="Content/Layout/PlayersRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 360)
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="Player2VBox" type="VBoxContainer" parent="Content/Layout/PlayersRow/Player2Card"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="Player2Label" type="Label" parent="Content/Layout/PlayersRow/Player2Card/Player2VBox"]
layout_mode = 2
text = "PLAYER 2"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.86, 0.9, 0.98, 1)

[node name="Player2Option" type="OptionButton" parent="Content/Layout/PlayersRow/Player2Card/Player2VBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(320, 48)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_pressed")
focus_mode = 1
mouse_filter = 1
name_in_owner = "Player2Option"

[node name="Player2BotToggle" type="CheckButton" parent="Content/Layout/PlayersRow/Player2Card/Player2VBox"]
layout_mode = 2
text = "Bot IA (P2)"
button_pressed = false
name_in_owner = "Player2BotToggle"

[node name="Player2BotPolicy" type="OptionButton" parent="Content/Layout/PlayersRow/Player2Card/Player2VBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(280, 40)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_pressed")
focus_mode = 1
mouse_filter = 1
name_in_owner = "Player2BotPolicy"

[node name="Player2Hint" type="Label" parent="Content/Layout/PlayersRow/Player2Card/Player2VBox"]
layout_mode = 2
text = "Escolha o oponente ou ative o bot."
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.56, 0.62, 0.74, 1)

[node name="ActionBar" type="HBoxContainer" parent="Content/Layout"]
layout_mode = 2
custom_constants/separation = 16
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="BackButton" type="Button" parent="Content/Layout/ActionBar"]
layout_mode = 2
text = "VOLTAR"
custom_minimum_size = Vector2(160, 46)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_secondary_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_secondary_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_secondary_pressed")
name_in_owner = "BackButton"
mouse_filter = 1

[node name="Spacer" type="Control" parent="Content/Layout/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="StartButton" type="Button" parent="Content/Layout/ActionBar"]
layout_mode = 2
text = "INICIAR PARTIDA"
custom_minimum_size = Vector2(260, 46)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_primary_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_primary_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_primary_pressed")
name_in_owner = "StartButton"
mouse_filter = 1

[node name="FooterHint" type="Label" parent="Content/Layout"]
layout_mode = 2
text = "Dica: selecione o mesmo personagem para treinar combos em espelho."
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.56, 0.68, 1)
autowrap_mode = 2

